samples/_failures_safe/1761361203_2ce8ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d35c2f6d.c: In function ‘main’:
./samples/SAFE/__tmp_d35c2f6d.c:166:12: error: missing terminating " character
  166 |     printf("Enter edges as
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d35c2f6d.c:166:5: error: expected expression at end of input
  166 |     printf("Enter edges as
      |     ^~~~~~
./samples/SAFE/__tmp_d35c2f6d.c:166:5: error: expected declaration or statement at end of input
